src/lib/parser/impl/reversionParser.ts
// Generated from reversion.g4 by ANTLR 4.13.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
  ATN,
  ATNDeserializer,
  DFA,
  type DecisionState,
  FailedPredicateException,
  NoViableAltException,
  Parser,
  ParserATNSimulator,
  ParserRuleContext,
  PredictionContextCache,
  RecognitionException,
  type RuleContext,
  type TerminalNode,
  Token,
  type TokenStream,
} from 'antlr4';
import type reversionListener from './reversionListener.js';
import type reversionVisitor from './reversionVisitor.js';

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
type Int = number;

export default class reversionParser extends Parser {
  public static readonly T__0 = 1;
  public static readonly T__1 = 2;
  public static readonly T__2 = 3;
  public static readonly T__3 = 4;
  public static readonly T__4 = 5;
  public static readonly T__5 = 6;
  public static readonly T__6 = 7;
  public static readonly T__7 = 8;
  public static readonly T__8 = 9;
  public static readonly T__9 = 10;
  public static readonly T__10 = 11;
  public static readonly T__11 = 12;
  public static readonly T__12 = 13;
  public static readonly T__13 = 14;
  public static readonly T__14 = 15;
  public static readonly T__15 = 16;
  public static readonly T__16 = 17;
  public static readonly T__17 = 18;
  public static readonly T__18 = 19;
  public static readonly T__19 = 20;
  public static readonly T__20 = 21;
  public static readonly T__21 = 22;
  public static readonly T__22 = 23;
  public static readonly T__23 = 24;
  public static readonly T__24 = 25;
  public static readonly T__25 = 26;
  public static readonly T__26 = 27;
  public static readonly T__27 = 28;
  public static readonly T__28 = 29;
  public static readonly T__29 = 30;
  public static readonly T__30 = 31;
  public static readonly T__31 = 32;
  public static readonly T__32 = 33;
  public static readonly T__33 = 34;
  public static readonly T__34 = 35;
  public static readonly T__35 = 36;
  public static readonly T__36 = 37;
  public static readonly T__37 = 38;
  public static readonly T__38 = 39;
  public static readonly T__39 = 40;
  public static readonly T__40 = 41;
  public static readonly T__41 = 42;
  public static readonly T__42 = 43;
  public static readonly T__43 = 44;
  public static readonly T__44 = 45;
  public static readonly T__45 = 46;
  public static readonly T__46 = 47;
  public static readonly T__47 = 48;
  public static readonly T__48 = 49;
  public static readonly T__49 = 50;
  public static readonly T__50 = 51;
  public static readonly T__51 = 52;
  public static readonly SIGNED_DIGIT = 53;
  public static readonly DIGIT = 54;
  public static readonly OID = 55;
  public static readonly OID_SHORT = 56;
  public static readonly OID_LONG = 57;
  public static readonly ISO_DATE = 58;
  public static readonly ISO_TIME = 59;
  public static readonly IS_TIME_POSTFIX = 60;
  public static readonly SPACE = 61;
  public static readonly INT12 = 62;
  public static readonly INT2 = 63;
  public static readonly INT4 = 64;
  public static readonly ANY = 65;
  public static readonly OID_EL = 66;
  public static readonly NEWLINE = 67;
  public static readonly EOF = Token.EOF;
  public static readonly RULE_reversion = 0;
  public static readonly RULE_rules = 1;
  public static readonly RULE_rev = 2;
  public static readonly RULE_refname = 3;
  public static readonly RULE_rev_expression = 4;
  public static readonly RULE_rev_position = 5;
  public static readonly RULE_rev_direction = 6;
  public static readonly RULE_ref_anchor = 7;
  public static readonly RULE_date = 8;
  public static readonly RULE_time_point = 9;
  public static readonly RULE_time_value = 10;
  public static readonly RULE_time_unit = 11;
  public static readonly RULE_time_direction = 12;
  public static readonly RULE_iso_8601 = 13;
  public static readonly literalNames: (string | null)[] = [
    null,
    "'since'",
    "'='",
    "'until'",
    "'after'",
    "'skip'",
    "'before'",
    "'max-age'",
    "'min-age'",
    "'author'",
    "'commiter'",
    "'grep'",
    "'exclude'",
    "'..'",
    "'...'",
    "'^'",
    "'HEAD'",
    "'@'",
    "':/'",
    "':'",
    "'!'",
    "'-'",
    "'{'",
    "'}'",
    "'~'",
    "'/'",
    "'yesterday'",
    "'today'",
    "'one'",
    "'two'",
    "'three'",
    "'four'",
    "'five'",
    "'six'",
    "'seven'",
    "'eight'",
    "'nine'",
    "'ten'",
    "'second'",
    "'minute'",
    "'hour'",
    "'day'",
    "'week'",
    "'month'",
    "'year'",
    "'seconds'",
    "'minutes'",
    "'hours'",
    "'days'",
    "'weeks'",
    "'months'",
    "'years'",
    "'ago'",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "' '",
  ];
  public static readonly symbolicNames: (string | null)[] = [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    'SIGNED_DIGIT',
    'DIGIT',
    'OID',
    'OID_SHORT',
    'OID_LONG',
    'ISO_DATE',
    'ISO_TIME',
    'IS_TIME_POSTFIX',
    'SPACE',
    'INT12',
    'INT2',
    'INT4',
    'ANY',
    'OID_EL',
    'NEWLINE',
  ];
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    'reversion',
    'rules',
    'rev',
    'refname',
    'rev_expression',
    'rev_position',
    'rev_direction',
    'ref_anchor',
    'date',
    'time_point',
    'time_value',
    'time_unit',
    'time_direction',
    'iso_8601',
  ];
  public get grammarFileName(): string {
    return 'reversion.g4';
  }
  public get literalNames(): (string | null)[] {
    return reversionParser.literalNames;
  }
  public get symbolicNames(): (string | null)[] {
    return reversionParser.symbolicNames;
  }
  public get ruleNames(): string[] {
    return reversionParser.ruleNames;
  }
  public get serializedATN(): number[] {
    return reversionParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(
      this,
      reversionParser._ATN,
      reversionParser.DecisionsToDFA,
      new PredictionContextCache(),
    );
  }
  // @RuleVersion(0)
  public reversion(): ReversionContext {
    const localctx: ReversionContext = new ReversionContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 0, reversionParser.RULE_reversion);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 28;
      this.rules(0);
      this.state = 29;
      this.match(reversionParser.EOF);
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  public rules(): RulesContext;
  public rules(_p: number): RulesContext;
  // @RuleVersion(0)
  public rules(_p?: number): RulesContext {
    if (_p === undefined) {
      _p = 0;
    }

    const _parentctx: ParserRuleContext = this._ctx;
    const _parentState: number = this.state;
    let localctx: RulesContext = new RulesContext(
      this,
      this._ctx,
      _parentState,
    );
    let _prevctx: RulesContext = localctx;
    const _startState = 2;
    this.enterRecursionRule(localctx, 2, reversionParser.RULE_rules, _p);
    try {
      let _alt: number;
      this.enterOuterAlt(localctx, 1);
      this.state = 83;
      this._errHandler.sync(this);
      switch (this._interp.adaptivePredict(this._input, 3, this._ctx)) {
        case 1:
          {
            localctx = new RevSingleContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;

            this.state = 32;
            this.rev();
          }
          break;
        case 2:
          {
            localctx = new RevExpressionContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 33;
            this.rev_expression();
          }
          break;
        case 3:
          {
            localctx = new RevSinceContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 34;
            this.match(reversionParser.T__0);
            this.state = 35;
            this.match(reversionParser.T__1);
            this.state = 36;
            this.date();
          }
          break;
        case 4:
          {
            localctx = new RevUntilContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 37;
            this.match(reversionParser.T__2);
            this.state = 38;
            this.match(reversionParser.T__1);
            this.state = 39;
            this.date();
          }
          break;
        case 5:
          {
            localctx = new RevAfterContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 40;
            this.match(reversionParser.T__3);
            this.state = 41;
            this.match(reversionParser.T__1);
            this.state = 42;
            this.date();
          }
          break;
        case 6:
          {
            localctx = new RevSkipContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 43;
            this.match(reversionParser.T__4);
            this.state = 44;
            this.match(reversionParser.T__1);
            this.state = 45;
            this.match(reversionParser.DIGIT);
          }
          break;
        case 7:
          {
            localctx = new RevBeforeContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 46;
            this.match(reversionParser.T__5);
            this.state = 47;
            this.match(reversionParser.T__1);
            this.state = 48;
            this.date();
          }
          break;
        case 8:
          {
            localctx = new RevMaxAgeContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 49;
            this.match(reversionParser.T__6);
            this.state = 50;
            this.match(reversionParser.T__1);
            this.state = 51;
            this.date();
          }
          break;
        case 9:
          {
            localctx = new RevMinAgeContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 52;
            this.match(reversionParser.T__7);
            this.state = 53;
            this.match(reversionParser.T__1);
            this.state = 54;
            this.date();
          }
          break;
        case 10:
          {
            localctx = new RevAuthorContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 55;
            this.match(reversionParser.T__8);
            this.state = 56;
            this.match(reversionParser.T__1);
            this.state = 58;
            this._errHandler.sync(this);
            _alt = 1;
            do {
              switch (_alt) {
                case 1:
                  {
                    this.state = 57;
                    this.match(reversionParser.ANY);
                  }
                  break;
                default:
                  throw new NoViableAltException(this);
              }
              this.state = 60;
              this._errHandler.sync(this);
              _alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
            } while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
          }
          break;
        case 11:
          {
            localctx = new RevCommiterContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 62;
            this.match(reversionParser.T__9);
            this.state = 63;
            this.match(reversionParser.T__1);
            this.state = 65;
            this._errHandler.sync(this);
            _alt = 1;
            do {
              switch (_alt) {
                case 1:
                  {
                    this.state = 64;
                    this.match(reversionParser.ANY);
                  }
                  break;
                default:
                  throw new NoViableAltException(this);
              }
              this.state = 67;
              this._errHandler.sync(this);
              _alt = this._interp.adaptivePredict(this._input, 1, this._ctx);
            } while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
          }
          break;
        case 12:
          {
            localctx = new RevGrepContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 69;
            this.match(reversionParser.T__10);
            this.state = 70;
            this.match(reversionParser.T__1);
            this.state = 72;
            this._errHandler.sync(this);
            _alt = 1;
            do {
              switch (_alt) {
                case 1:
                  {
                    this.state = 71;
                    this.match(reversionParser.ANY);
                  }
                  break;
                default:
                  throw new NoViableAltException(this);
              }
              this.state = 74;
              this._errHandler.sync(this);
              _alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
            } while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
          }
          break;
        case 13:
          {
            localctx = new RevExcludeContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 76;
            this.match(reversionParser.T__11);
            this.state = 77;
            this.match(reversionParser.T__1);
            this.state = 78;
            this.rules(8);
          }
          break;
        case 14:
          {
            localctx = new RevRangeBefore1Context(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 79;
            this.match(reversionParser.T__12);
            this.state = 80;
            this.rules(2);
          }
          break;
        case 15:
          {
            localctx = new RevRangeBefore2Context(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 81;
            this.match(reversionParser.T__13);
            this.state = 82;
            this.rules(1);
          }
          break;
      }
      this._ctx.stop = this._input.LT(-1);
      this.state = 104;
      this._errHandler.sync(this);
      _alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
      while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1) {
          if (this._parseListeners != null) {
            this.triggerExitRuleEvent();
          }
          _prevctx = localctx;
          this.state = 102;
          this._errHandler.sync(this);
          switch (this._interp.adaptivePredict(this._input, 5, this._ctx)) {
            case 1:
              {
                localctx = new RevRange1Context(
                  this,
                  new RulesContext(this, _parentctx, _parentState),
                );
                this.pushNewRecursionContext(
                  localctx,
                  _startState,
                  reversionParser.RULE_rules,
                );
                this.state = 85;
                if (!this.precpred(this._ctx, 4)) {
                  throw this.createFailedPredicateException(
                    'this.precpred(this._ctx, 4)',
                  );
                }
                this.state = 86;
                this.match(reversionParser.T__12);
                this.state = 87;
                this.rules(5);
              }
              break;
            case 2:
              {
                localctx = new RevRange2Context(
                  this,
                  new RulesContext(this, _parentctx, _parentState),
                );
                this.pushNewRecursionContext(
                  localctx,
                  _startState,
                  reversionParser.RULE_rules,
                );
                this.state = 88;
                if (!this.precpred(this._ctx, 3)) {
                  throw this.createFailedPredicateException(
                    'this.precpred(this._ctx, 3)',
                  );
                }
                this.state = 89;
                this.match(reversionParser.T__13);
                this.state = 90;
                this.rules(4);
              }
              break;
            case 3:
              {
                localctx = new RevRangeAfter1Context(
                  this,
                  new RulesContext(this, _parentctx, _parentState),
                );
                this.pushNewRecursionContext(
                  localctx,
                  _startState,
                  reversionParser.RULE_rules,
                );
                this.state = 91;
                if (!this.precpred(this._ctx, 7)) {
                  throw this.createFailedPredicateException(
                    'this.precpred(this._ctx, 7)',
                  );
                }
                this.state = 92;
                this.match(reversionParser.T__12);
              }
              break;
            case 4:
              {
                localctx = new RevRangeAfter2Context(
                  this,
                  new RulesContext(this, _parentctx, _parentState),
                );
                this.pushNewRecursionContext(
                  localctx,
                  _startState,
                  reversionParser.RULE_rules,
                );
                this.state = 93;
                if (!this.precpred(this._ctx, 6)) {
                  throw this.createFailedPredicateException(
                    'this.precpred(this._ctx, 6)',
                  );
                }
                this.state = 94;
                this.match(reversionParser.T__13);
              }
              break;
            case 5:
              {
                localctx = new RevMultiContext(
                  this,
                  new RulesContext(this, _parentctx, _parentState),
                );
                this.pushNewRecursionContext(
                  localctx,
                  _startState,
                  reversionParser.RULE_rules,
                );
                this.state = 95;
                if (!this.precpred(this._ctx, 5)) {
                  throw this.createFailedPredicateException(
                    'this.precpred(this._ctx, 5)',
                  );
                }
                this.state = 98;
                this._errHandler.sync(this);
                _alt = 1;
                do {
                  switch (_alt) {
                    case 1:
                      {
                        this.state = 96;
                        this.match(reversionParser.SPACE);
                        this.state = 97;
                        this.rules(0);
                      }
                      break;
                    default:
                      throw new NoViableAltException(this);
                  }
                  this.state = 100;
                  this._errHandler.sync(this);
                  _alt = this._interp.adaptivePredict(
                    this._input,
                    4,
                    this._ctx,
                  );
                } while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
              }
              break;
          }
        }
        this.state = 106;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.unrollRecursionContexts(_parentctx);
    }
    return localctx;
  }
  // @RuleVersion(0)
  public rev(): RevContext {
    let localctx: RevContext = new RevContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, reversionParser.RULE_rev);
    try {
      this.state = 111;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 16:
        case 17:
          localctx = new RefNameContext(this, localctx);
          this.enterOuterAlt(localctx, 1);
          {
            this.state = 107;
            this.refname();
          }
          break;
        case 55:
          localctx = new RefOIDContext(this, localctx);
          this.enterOuterAlt(localctx, 2);
          {
            this.state = 108;
            this.match(reversionParser.OID);
          }
          break;
        case 15:
          localctx = new RefExcludeContext(this, localctx);
          this.enterOuterAlt(localctx, 3);
          {
            this.state = 109;
            this.match(reversionParser.T__14);
            this.state = 110;
            this.rev();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public refname(): RefnameContext {
    const localctx: RefnameContext = new RefnameContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 6, reversionParser.RULE_refname);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 113;
      _la = this._input.LA(1);
      if (!(_la === 16 || _la === 17)) {
        this._errHandler.recoverInline(this);
      } else {
        this._errHandler.reportMatch(this);
        this.consume();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public rev_expression(): Rev_expressionContext {
    let localctx: Rev_expressionContext = new Rev_expressionContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 8, reversionParser.RULE_rev_expression);
    let _la: number;
    try {
      let _alt: number;
      this.state = 144;
      this._errHandler.sync(this);
      switch (this._interp.adaptivePredict(this._input, 11, this._ctx)) {
        case 1:
          localctx = new ExprPosContext(this, localctx);
          this.enterOuterAlt(localctx, 1);
          {
            this.state = 115;
            this.rev();
            this.state = 116;
            this.rev_direction();
            this.state = 117;
            this.rev_position();
          }
          break;
        case 2:
          localctx = new ExprDigitContext(this, localctx);
          this.enterOuterAlt(localctx, 2);
          {
            this.state = 119;
            this.rev();
            this.state = 120;
            this.rev_direction();
            this.state = 121;
            this.match(reversionParser.DIGIT);
          }
          break;
        case 3:
          localctx = new ExprTextContext(this, localctx);
          this.enterOuterAlt(localctx, 3);
          {
            this.state = 123;
            this.match(reversionParser.T__17);
            this.state = 125;
            this._errHandler.sync(this);
            _alt = 1;
            do {
              switch (_alt) {
                case 1:
                  {
                    this.state = 124;
                    _la = this._input.LA(1);
                    if (!(_la === 61 || _la === 65)) {
                      this._errHandler.recoverInline(this);
                    } else {
                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                  }
                  break;
                default:
                  throw new NoViableAltException(this);
              }
              this.state = 127;
              this._errHandler.sync(this);
              _alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
            } while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
          }
          break;
        case 4:
          localctx = new ExprRevTextContext(this, localctx);
          this.enterOuterAlt(localctx, 4);
          {
            this.state = 129;
            this.rev();
            this.state = 130;
            this.match(reversionParser.T__18);
            this.state = 132;
            this._errHandler.sync(this);
            _alt = 1;
            do {
              switch (_alt) {
                case 1:
                  {
                    this.state = 131;
                    this.match(reversionParser.ANY);
                  }
                  break;
                default:
                  throw new NoViableAltException(this);
              }
              this.state = 134;
              this._errHandler.sync(this);
              _alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
            } while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
          }
          break;
        case 5:
          localctx = new ExprDigitTextContext(this, localctx);
          this.enterOuterAlt(localctx, 5);
          {
            this.state = 136;
            this.match(reversionParser.T__18);
            this.state = 137;
            this.match(reversionParser.DIGIT);
            this.state = 138;
            this.match(reversionParser.T__18);
            this.state = 140;
            this._errHandler.sync(this);
            _alt = 1;
            do {
              switch (_alt) {
                case 1:
                  {
                    this.state = 139;
                    this.match(reversionParser.ANY);
                  }
                  break;
                default:
                  throw new NoViableAltException(this);
              }
              this.state = 142;
              this._errHandler.sync(this);
              _alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
            } while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public rev_position(): Rev_positionContext {
    let localctx: Rev_positionContext = new Rev_positionContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 10, reversionParser.RULE_rev_position);
    let _la: number;
    try {
      this.state = 155;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 17:
          localctx = new PosHeadContext(this, localctx);
          this.enterOuterAlt(localctx, 1);
          {
            this.state = 146;
            this.match(reversionParser.T__16);
          }
          break;
        case 20:
          localctx = new PosExcludeContext(this, localctx);
          this.enterOuterAlt(localctx, 2);
          {
            this.state = 147;
            this.match(reversionParser.T__19);
          }
          break;
        case 53:
          localctx = new PosNegContext(this, localctx);
          this.enterOuterAlt(localctx, 3);
          {
            this.state = 148;
            this.match(reversionParser.SIGNED_DIGIT);
          }
          break;
        case 21:
          localctx = new PosReverseContext(this, localctx);
          this.enterOuterAlt(localctx, 4);
          {
            this.state = 149;
            this.match(reversionParser.T__20);
          }
          break;
        case 22:
          localctx = new PosAnchorContext(this, localctx);
          this.enterOuterAlt(localctx, 5);
          {
            this.state = 150;
            this.match(reversionParser.T__21);
            this.state = 152;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (
              ((_la & ~0x1f) === 0 && ((1 << _la) & 4261412864) !== 0) ||
              (((_la - 32) & ~0x1f) === 0 &&
                ((1 << (_la - 32)) & 73400383) !== 0)
            ) {
              this.state = 151;
              this.ref_anchor();
            }
